Archive2/38/081770e3a6f444/output
main.cpp: In function ‘int main()’:
main.cpp:16:18: error: ‘is_trivially_copy_constructible’ is not a member of ‘std’
               << std::is_trivially_copy_constructible<Ex1>::value << '\n'
                  ^
main.cpp:16:58: error: expected primary-expression before ‘>’ token
               << std::is_trivially_copy_constructible<Ex1>::value << '\n'
                                                          ^
main.cpp:16:59: error: ‘::value’ has not been declared
               << std::is_trivially_copy_constructible<Ex1>::value << '\n'
                                                           ^
main.cpp:18:18: error: ‘is_trivially_copy_constructible’ is not a member of ‘std’
               << std::is_trivially_copy_constructible<Ex2>::value << '\n'
                  ^
main.cpp:18:58: error: expected primary-expression before ‘>’ token
               << std::is_trivially_copy_constructible<Ex2>::value << '\n'
                                                          ^
main.cpp:18:59: error: ‘::value’ has not been declared
               << std::is_trivially_copy_constructible<Ex2>::value << '\n'
                                                           ^
